[package]
name = "rest-api"
version = "0.1.0"
authors = ["MrJCJ <mrjcj@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
uwuify = "^0.2"
percent-encoding = "2.1.0"